# BLE-Range

./: .gitignore  BLE-Range.pc  BLE-Range.pc.in  CMakeLists.txt  ble-rangeConfig.cmake
include/: AdapterProxy.hpp  BluetoothDetector.hpp  BluetoothDetectorApi.hpp  GDBusProxyAuto.hpp  GDBusProxyFactory.hpp  GMainLoopProxy.hpp  PrivateBluetoothDetectorApi.hpp
src/: AdapterProxy.cpp  BluetoothDetector.cpp  BluetoothDetectorApiFactory.cpp  GMainLoopProxy.cpp  PrivateBluetoothDetectorApi.cpp
